# detector

./: Audio_WavFile.cpp  Audio_WavFile.h  CMakeLists.txt  Clicking.aiff  Clicking100.aiff  Specs.rtf  demo.cpp  detector.cpp  detector.h  new_detector.vcxproj  new_detector.vcxproj.filters
